--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,36 @@
         <title>dictionary</title>
     </head>
     <body class="container">
-  
+        <header class="header">
+            <img src="img/logo.png" alt="header logo" class="header__logo">
+            <form action="" class="search">
+                <input type="text" class="search__input" required>
+                <button class="search__btn">
+                    <svg class="search__icon">
+                        <use href="img/sprite.svg#icon-magnifying-glass"></use>
+                    </svg>
+                </button>
+            </form>
+            <nav class="nav__container">
+                <ul class="nav__list">
+                    <li class="nav__item nav__item--active">
+                        <a href="#" class="nav__link">
+                            <svg class="nav__icon">
+                                <use href="img/sprite.svg#icon-home"></use>
+                            </svg>
+                            <span>home</span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <svg class="nav__icon">
+                                <use href="img/sprite.svg#icon-key"></use>
+                            </svg>
+                            <span>favorites</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
