--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <script>
             var app = Elm.Main.init({flags: localStorage.session || null});
             
-            app.ports.storeSession.subScript(function(session) {
+            app.ports.storeSession.subscribe(function(session) {
                 localStorage.session = session;
                 console.log("store", session)
 
