--- a/html/index.html
+++ b/html/index.html
@@ -50,8 +50,8 @@
                             <div class="entries entries-thisword mb-md">
                                 <h3 class="entries__title heading-3">Entries</h3>
                                 <ul class="entries__list">
-                                    <li class="entries__item"><a href="#" class="entries__link">go (verb)</a></li>
-                                    <li class="entries__item"><a href="#" class="entries__link">go (noun)</a></li>
+                                    <li class="entries__item"><button class="entries__btn entries__btn--selected">go (verb)</button></li>
+                                    <li class="entries__item"><button class="entries__btn">go (noun)</button></li>
                                 </ul>
                             </div>
                             <div class="entries entries-otherword">
