--- a/html/vocabulary.html
+++ b/html/vocabulary.html
@@ -65,7 +65,31 @@
                     </div>
                     <div class="vocabulary">
                         <div class="vocabulary__container">
-                            <h2 class="vocabulary__headword heading-2 mb-sm">Go</h2>
+                            <header class="vocabulary__header  mb-sm">
+                                <h2 class="vocabulary__headword heading-1">Go</h2>
+                                <span class="vocabulary__functional-label">verb</span>
+                                <div class="vocabulary__pronunciation">
+                                    <span class="vocabulary__ipa">ˈgoʊ</span>
+                                    <button class="vocabulary__sound">
+                                        <svg class="vocabulary__sound-icon">
+                                            <use href="img/sprite.svg#icon-audio"></use>
+                                        </svg>
+                                    </button>
+                                    <audio class="vocabulary__sound-audio" id="audio" src=""></audio>
+                                </div>
+                                <button class="vocabulary__save">
+                                    <svg class="vocabulary__save-icon">
+                                        <use href="img/sprite.svg#icon-star"></use>
+                                    </svg>
+                                </button>
+                            </header>
+                            <div class="vocabulary__brief">
+                                <ul class="vocabulary__brief-list">
+                                    <li class="vocabulary__brief-item">to come or go down quickly from a high place or position</li>
+                                    <li class="vocabulary__brief-item">to come or go down suddenly from a standing position —often + down or over</li>
+                                    <li class="vocabulary__brief-item">to let yourself come or go down to a lower position</li>
+                                </ul>
+                            </div>
                             <div class="vocabulary__definition">
                                 <span class="vocabulary__grammatical">no object</span> 
                                 <figure class="vocabulary__senses">
@@ -88,21 +112,8 @@
                                 </figure>
 
                             </div>
-                            <div class="vocabulary__definition">
-                                <figure class="vocabulary__senses">
-                                    <figcaption class="vocabulary__senses-text">
-                                        <span class="vocabulary__label">no obj</span>
-                                        {bc}to move to or be at a place (such as an office or school) for work, study, etc.
-                                    </figcaption>
-                                    <div class="vocabulary__usage">
-                                        <p class="vocabulary__usage-text">+ {it}to{/it} </p>
-                                        <ul class="vocabulary__list-example">
-                                            <li class="vocabulary__example">She {it}goes to{/it} church on Sunday.</li>
-                                            <li class="vocabulary__example">She {it}goes to{/it} work from 9 a.m. to 5 p.m.</li>
-                                            <li class="vocabulary__example">Their son is {it}going to{/it} college in Florida. [=he is attending a college in Florida]</li><li class="vocabulary__example">He {it}went to{/it} prison for his crimes.</li></ul></div></figure><figure class="vocabulary__senses"><figcaption class="vocabulary__senses-text"><span class="vocabulary__label">no obj</span>{bc}to do something that involves moving or traveling to a place</figcaption><div class="vocabulary__usage"><p class="vocabulary__usage-text">often + {it}on{/it} </p><ul class="vocabulary__list-example"><li class="vocabulary__example">We're {it}going on{/it} vacation next week.</li><li class="vocabulary__example">The thieves {it}went on{/it} a crime spree.</li></ul></div><figcaption class="vocabulary__senses-text"><span class="vocabulary__label">no obj</span>{dx}see also {dxt|go for||5 (below)}{/dx}</figcaption></figure><figure class="vocabulary__senses"><figcaption class="vocabulary__senses-text"><span class="vocabulary__label">no obj</span>{bc}to move or travel to a place for a particular purpose </figcaption><ul class="vocabulary__list-example"><li class="vocabulary__example">I {it}went{/it} to see them last week.</li><li class="vocabulary__example">We {it}went{/it} to see a movie last night. = We {it}went{/it} to a movie last night.</li><li class="vocabulary__example">Are you {it}going{/it} to the wedding? [=do you plan to attend the wedding?]</li><li class="vocabulary__example">I may {it}go{/it} to see them next week. = I may {it}go{/it} and see them next week. = ({it}US{/it}) I may {it}go{/it} see them next week.</li></ul></figure><figure class="vocabulary__senses"><figcaption class="vocabulary__senses-text"><span class="vocabulary__label">+ obj</span>{bc}to engage in ({it}doing{/it} something) </figcaption><ul class="vocabulary__list-example"><li class="vocabulary__example">Don't {it}go telling{/it} everyone what happened. [=don't tell everyone what happened]</li>
-                                        </ul>
-                                    </div>
-                                </figure>
+                            <div class="vocabulary__crossRef">
+                                <p>past tense of <a style="font-weight: bold; color: #bbb" href="see">  see</a></p>
                             </div>
 
                             
