--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <script>
             var app = Elm.Main.init({flags: localStorage.session || null});
             
-            app.ports.storeSession.subscribe(function(session) {
-                localStorage.session = session;
-                console.log("store", session)
+            app.ports.storeCache.subscribe(function(session) {
+                localStorage.session = JSON.stringify(session, 2);
+                console.log({session})
 
-                setTimeout(() => app.ports.onSessionChange.send(session), 0)
+                setTimeout(() => app.ports.onSessionChange.send(localStorage.session), 0)
             })
 
             window.addEventListener("Storage", function(evt) {
@@ -29,6 +29,16 @@
                     app.ports.onSessionChange.send(event.newValue);
                 }
             })
+
+            app.ports.soundCmdToJs.subscribe(function(msg) {
+                console.log(msg)
+                if (msg == "play")  { playAudio() }
+            })
+
+            function playAudio() {
+                var audio = document.querySelector("#audio");
+                audio.play(); 
+            }
         </script>
     </body>
 </html>
